<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />


    <Button
        android:id="@+id/lock_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintRight_toLeftOf="parent" />

    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/note_title"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etNoteContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|start"
        android:hint="@string/write_your_note_here"
        android:inputType="textMultiLine"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/bold_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etNoteContent"

        />

    <Button
        android:id="@+id/italic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i"
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@+id/bold_button"
        app:layout_constraintTop_toBottomOf="@+id/etNoteContent" />

    <Button
        android:id="@+id/under_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/u"
        app:layout_constraintTop_toBottomOf="@+id/etNoteContent" />
</LinearLayout>
